# h1_2_mimic_deploy_real

./: .gitignore  审查报告_20250630.md
include/: param.h  unitree_articulation.h
include/FSM/: BaseState.h  CtrlFSM.h  State_LocoVelocity.h  State_RLBase.h  State_WalkVelocity.h
include/isaaclab/algorithms/: algorithms.h
include/isaaclab/envs/: manager_based_rl_env.h
include/isaaclab/manager/: action_manager.h  (+1 more)
robots/h1_2/: CMakeLists.txt  main.cpp
robots/h1_2/config/: config.yaml
robots/h1_2/config/policy/mimic/dance1_subject2/params/: dance1_subject2.csv
robots/h1_2/config/policy/mimic/stand_still/params/: stand_still_h1_2.npz
robots/h1_2/config/policy/mimic/v0/exported/: policy.onnx
robots/h1_2/config/policy/mimic/v0/params/: dance1_subject2_first3s.npz  deploy.yaml  deploy_multi_motion.yaml
robots/h1_2/config/policy/velocity/v0/params/: deploy.yaml
robots/h1_2/config/policy/walk_velocity/v0/exported/: policy.onnx
robots/h1_2/config/policy/walk_velocity/v0/params/: deploy.yaml
robots/h1_2/include/: State_Mimic.h
robots/h1_2/src/: State_Mimic.cpp  State_RLBase.cpp  State_WalkVelocity.cpp
robots/h1_2/tools/: analyze_cpp_wv_dump.py  analyze_mimic_cpp_dump.py  analyze_motion_onnx.py  analyze_walk_velocity_dump.py  capture_mimic_golden_trace_v2.py  capture_walk_velocity_golden_trace.py  capture_walk_velocity_rollout.py  cleanup.sh  cleanup_wv_test.sh  compare_mimic_traces.py  compare_traces.py  compare_walk_velocity_assembly.py  compare_walk_velocity_deploy.py  fix_walk_velocity_onnx_state.py  kill_sim.sh  replay_validator.cpp  replay_validator_mimic.cpp  sim_mimic_keyboard.py  sim_walk_velocity_keyboard.py
(+4 files in other folders)
